# superdata

./: CMakeLists.txt  job2.sh  p4.c  p4.tex  p4_1.c  p4_2.c  p4_3.c  p4_4.c  p4_butcher.c
